# runtime-uuid-registry

./: Cargo.toml  LICENSE  README.md
global-uuid-sys/src/: interface.rs  lib.rs
src/: interface.rs  lib.rs  registry.rs
