[package]
name = "active-uuid-registry"
version = "0.1.0"
authors = ["jrcalgo <jacksonr121@outlook.com"]
edition = "2024"
description = "A library for managing process UUIDs"
repository = "https://github.com/jrcalgo/active-uuid-registry"
readme = "README.md"
keywords = ['uuid', 'guid', 'concurrency', 'pool', 'synchronization']
categories = ['concurrency', 'data-structures', 'rust-patterns']
license = "MIT"

[dependencies]
uuid = { version = "1.19.0", features = ["v8"] }
rand = "0.9.2"
thiserror = "2.0.17"
parking_lot = "0.12.5"

[dependencies.dashmap]
version = "6.1.0"
optional = true

[features]
concurrent = ["dashmap"]
